----------------------------------------------------------------------
 OmegaT 2.1.1
----------------------------------------------------------------------
  4 Enhancements
  3 Bugfixes
----------------------------------------------------------------------
2.1.1 vs. 2.1.0

  Other enhancements:

  - Typo3 LocManager File Filter

  - Use tokenizers as plugins
  (Requires version x.x-2.1 of the tokenizers)

  - Text selected in the Matches pane can be inserted with a right click

  - New options to enable checking localisation variables
  (see http://sourceforge.net/support/tracker.php?aid=2890624)

  Bug Fixes:

  - Number of unique segments always 0 in standard statistics
  http://sourceforge.net/support/tracker.php?aid=2879866

  - Non-tag is marked as tag error 
  http://sourceforge.net/support/tracker.php?aid=2890624

  - When there were fuzzy matches for a given segment, it wasn't counted
as a repetition in Match Statistics

  - Wrong spell checker display if word split to several lines

----------------------------------------------------------------------
 OmegaT 2.1.0
----------------------------------------------------------------------
  2 Enhancements
  0 Bugfix
----------------------------------------------------------------------
2.1.0 vs. 2.0.5

  Implemented requests:

  - Match Statistics
  http://sourceforge.net/support/tracker.php?aid=2876216

  - Display Statistics in a window
  http://sourceforge.net/support/tracker.php?aid=2876217 

----------------------------------------------------------------------
 OmegaT 2.0.5 update 1
----------------------------------------------------------------------
  4 Enhancements
  2 Bugfixes
----------------------------------------------------------------------
2.0.5 update 1 vs. 2.0.5

  Other enhancements:
  - Turkish localisation updated to 2.0.5 (UI, Readme, Instant Start)
  
  - Change pseudo-translated TMX parameter and documentation

  - Hunspell for Linux 64-bit updated to 1.2.8
