@@ -24,6 +24,9 @@ OmegaT-Filter: true
 Name: org.omegat.filters3.xml.xhtml.XHTMLFilter
 OmegaT-Filter: true
 
+Name: org.omegat.filters3.xml.helpandmanual.HelpAndManualFilter
+OmegaT-Filter: true
+
 Name: org.omegat.filters2.html2.HTMLFilter2
 OmegaT-Filter: true
 
