@@ -802,6 +802,9 @@ XLIFF_FILTER_NAME=XLIFF Files
 # RESXFilter.java
 RESX_FILTER_NAME=ResX Files
 
+# HelpAndManualFilter.java
+HELPANDMANUAL_FILTER_NAME=Help & Manual Files
+
 # Typo3Filter.java
 TYPO3_FILTER_NAME=Typo3 LocManager Files
 
