@@ -750,6 +750,9 @@ XLIFF_FILTER_NAME=Fichiers XLIFF
 # RESXFilter.java
 RESX_FILTER_NAME=Fichiers ResX
 
+# HelpAndManualFilter.java
+HELPANDMANUAL_FILTER_NAME=Fichiers Help & Manual
+
 # Typo3Filter.java
 TYPO3_FILTER_NAME=Fichiers LocManager Typo3
 
